# gallery2

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: generate-latest.mjs  generate-signer-key.mjs  package.rs  package_common.rs  package_macos.rs  package_windows.rs
src/: App.css  App.tsx  icons.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: SimpChinese.nsh  installer.nsi
src-tauri/src/: gallery.rs  lib.rs  main.rs  models.rs  scanner.rs
src-tauri/src/app/: commands.rs  labels.rs  mod.rs  state.rs  updates.rs
src-tauri/src/editor/: mod.rs  session.rs  xai.rs
src-tauri/src/shared/: encoding.rs  mod.rs  models.rs  path_utils.rs  time.rs
src-tauri/src/storage/: asset_scope.rs  config.rs  db.rs  mod.rs  paths.rs
src-tauri/src/window/: desktop_background.rs  mod.rs  standard.rs
src/features/editor/: EditorDrawer.tsx
src/features/gallery/: CarouselView.tsx  GalleryView.tsx  MediaTile.tsx  layout.ts  useWindowViewport.ts
src/features/settings/: SettingsView.tsx
